# Kani

./: .gitignore  CMakeLists.txt  Makefile  main.mm
Resources/: Info.plist
Source/: AppDelegate.hh  AppDelegate.mm  KaniErrors.hpp  KaniErrors.mm  KaniMainToolbarDelegate.hh  KaniMainToolbarDelegate.mm  KaniMainView.hh  KaniMainView.mm  main.mm  test_play_song.cpp
